@@ -90,6 +90,7 @@ namespace libtorrent
 		void add_node(std::pair<std::string, int> const& node);
 		void add_tracker(std::string const& url, int tier = 0);
 		void set_root_cert(std::string const& pem);
+		void set_encryption_key(std::string const& key);
 		void set_priv(bool p) { m_private = p; }
 
 		int num_pieces() const { return m_files.num_pieces(); }
@@ -148,6 +149,11 @@ namespace libtorrent
 
 		// this is the root cert for SSL torrents
 		std::string m_root_cert;
+
+		// if this is an encrypted torrent, this is the
+		// symmetric encryption key every stream is
+		// encrypted by
+		std::string m_encryption_key;
 
 		// this is used when creating a torrent. If there's
 		// only one file there are cases where it's impossible
